# helpernote

./: .env.example  .env.production.example  .gitignore  .mcp.json  BRAND.md  CLAUDE.md  CLEANUP_REPORT.md  COMPREHENSIVE_EVALUATION_REPORT.md  CONFIGURATION.md  DEPLOY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FLOW.md  DEPLOYMENT_STATUS.md  ENV_SETUP_GUIDE.md  ENV_SUMMARY.md  ENV_TIMING.md  GITHUB_ACTIONS_SETUP.md  Makefile  NEXT_STEPS.md  QUICKSTART_TESTING.md  README.md  SECRETS_MANAGEMENT.md  STATUS.md  WORKFLOW.md  docker-compose.dev.yml  docker-compose.yml  nerd-compose.yaml  reset-git-history.sh
backend/: .dockerignore  .env.example  AUTH_IMPLEMENTATION.md  AUTH_SETUP_GUIDE.md  Cargo.toml  Dockerfile
backend/.sqlx/: query-01295036125f63099cb060e77c16b6d64c3b337d08ebbfd01f0032bce3a7e467.json  query-06968c1ff80bb74c1e0129cc49769aba893aac51dc4c97453e73876b64a528d8.json  query-0915942db2f33fbc79c1504c1a774cc54274577c5e42801b1072f0f976235c2e.json  query-098d42a355d1e8a64bed6e4f619f924931409e3b411a34816be95e2160963979.json  query-0b8aa43fa7207dea0f32f051c59bbb561324d31022ef5accd25279e107057a13.json  query-0ec7ea61624bb8e88b65c28008ee6e462e6da367d7cb3e280e6d79b8e26dda3f.json  query-1135e04a3cefa4eddc37388f74ac60515823e454fb3671b07aaa7f735a3982be.json  query-147d3e9fa117b1fe9618b8dde9d175b13bfb68e43dd187a970f148b112eba4a0.json  query-199b72ec7d606f9588c3ec9fd2f84d2caf5c1da12288f58ec12ac97820a50ea8.json  query-1dbf869009c0b8f1143307714ca7edd9a77c4d16355200295d594a5a0566c328.json  query-1e073bdccf82630809bcad3486a1ded28c345908ff29a238005df3d31b82b4f6.json  query-1fc5a87b4289c286ef00b3a5f105de4c2880e0becd7806085dc4e90d055311af.json  query-2083f7615f6c02d03ee117395ddcc4c91f9dcd52e733d8babbddd1edf5547fcd.json  query-228274051d2af3fe32a4a0440c6dacca8750271ee3022b4fc7028051f2ec8239.json  query-27522dac9c374cbbe8baf16fb198ccd08807d945f01b56954e59d636acc7a208.json  query-284c194fe71a798ddfd31e73e719bedbd4886928378a90c90752daf933437a39.json  query-29d24b6518e3d3be586c69197093b67e87330d83ac97922949ce3ce463e447a7.json  query-2a40693a6b4e0280302e1f3cf5d34efd353d026f9f94586175941016f87af103.json  query-2c538955d6a25eb9bab81ad94e741a339ff5aefedffbaff8d27a662d43d5f3d6.json  query-2cc09d5565d294ad78a1dc983d139ad9cb425f8b549b912612f7cf593ef773ea.json  query-2e446717bc2a6ffc14e855628a387ce6a2fa51f8ef98a720f787673786519087.json  query-3210518c904d7065b14b67dcc8a09c045b3b2f3b9f6710e2721ac85a8879d58b.json  query-332babcc60f07f1e5a5c96876b346e5e29f07d8da870a5422c8bb3fad9932cd5.json  query-336e898893b322d15236904bebd3b0fbddf64ced01d27c415aeb61e5d403038b.json  query-3381bddb7a994955f12c3bb4d99422647663cb66ae751985f9f0d3fd43609494.json  query-351e21788161ceca6c6c4e83469b309343f54ad543743711f584f749276e7fa5.json  query-3d200ab3ec38706d3507586f8a1e0ba18e472060e899716e48de6712a85854d0.json  query-3ddf6a462e7d80e1d523d35cb65f9f96cc67abf94ce41fe0067023dbd23717b0.json  query-48cc30a6e4aed6b3d2ffd7e7290aa3de369461b1172e58a88e39de8d430f0a9b.json  query-4d36b24368dba01e37ca58535edaa4c8c91bec30cd900f697a8cb49dcfa4a32f.json  query-4f523bb3061cd77b30e8f030cd2f9c880937381a137262bf890a4d1d609d54a4.json  query-510fc4cb019539bf3593f190a410a81d9f2d9d817c98f87b117e6c969e6dbb53.json  query-517137ad692a84ab76de011ef1fe175778760c8bc9b309a5dd263af31a963654.json  query-586eb8cd43d9abb6f1bfe96eaf74b0062f2bb55d52f90e49fe89ae13e573c538.json  query-5a046b38bb5772b4683dbfe593b53de704543764eb7d7638042160e389ab3081.json  query-5d8e3a58c8217606e00756f68a13f7c817664fa0a31f3662f85ec486b241c4de.json  query-64fb603da12b7a6b305c6cfee5c45e0f5b224fe031dc1d2f07c9e25b503c0237.json  query-658508a83d1cc08731fd7fae9c1b730b779cb00a532b0699bfc042f890e29552.json  query-68d666a73f8570f4deb7319bbaf7dcc0b630a7c864ba2b626ee0c7fae147548d.json  query-6941edc9de5c0d0e8d0d3608bf1643b30ab700df301db04f88a5441b3c3ce526.json  (+47 more)
backend/examples/: create_test_hash.rs  generate_hash.rs  verify_hash.rs
backend/migrations/: 20240701000000_fix_default_fee_rates.sql  20251010080232_initial_schema.sql  20251016000100_seed_sample_data.sql  20251018000000_seed_security_questions.sql
backend/src/: config.rs  lib.rs  main.rs
(+290 files in other folders)
