[package]
name = "helpernote-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate", "rust_decimal"] }
rust_decimal = "1.36"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# JWT Authentication
jsonwebtoken = "9"

# Password hashing
bcrypt = "0.15"

# Environment variables
dotenvy = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["serde", "v4"] }

# Object storage (MinIO)
rust-s3 = "0.35"

# Validation
validator = { version = "0.18", features = ["derive"] }

[dev-dependencies]
